package dk.sdu.mmmi.cbse.asteroid;

import dk.sdu.mmmi.cbse.common.asteroids.Asteroid;
import dk.sdu.mmmi.cbse.common.data.Entity;
import dk.sdu.mmmi.cbse.common.data.GameData;
import dk.sdu.mmmi.cbse.common.data.World;
import dk.sdu.mmmi.cbse.common.services.IEntityProcessingService;

public class AsteroidControlSystem implements IEntityProcessingService {

    @Override
    public void process(GameData gameData, World world) {
        for (Entity asteroid : world.getEntities(Asteroid.class)) {
            asteroidMovement(asteroid);
            checkAsteroidOutOfBounds(asteroid, gameData);
        }
    }

    public void checkAsteroidOutOfBounds(Entity asteroid, GameData gameData) {
        if (asteroid.getX() < 0) {
            asteroid.setX(asteroid.getX() + gameData.getDisplayWidth());
        }

        if (asteroid.getX() > gameData.getDisplayWidth()) {
            asteroid.setX(asteroid.getX() % gameData.getDisplayWidth());
        }

        if (asteroid.getY() < 0) {
            asteroid.setY(asteroid.getY() + gameData.getDisplayHeight());
        }

        if (asteroid.getY() > gameData.getDisplayHeight()) {
            asteroid.setY(asteroid.getY() % gameData.getDisplayHeight());
        }
    }

    public void asteroidMovement(Entity asteroid) {
        double changeX = Math.cos(Math.toRadians(asteroid.getRotation()));
        double changeY = Math.sin(Math.toRadians(asteroid.getRotation()));
        asteroid.setX(asteroid.getX() + changeX * 0.5);
        asteroid.setY(asteroid.getY() + changeY * 0.5);
    }
}
