@startuml
title "Asteroid class diagram"
component CommonAsteroid {
    interface AsteroidSplitterSPI {
        +void createSplitAsteroid(Entity e, World w)
    }

    class Asteroid {
        +enum Type { LARGE, MEDIUM, SMALL }
    }

}

component Asteroid {
    class AsteroidControlSystem {
        +void process(GameData gameData, World world)
    }

    class AsteroidPlugin {
        +void start(GameData gameData, World world)
        +void stop(GameData gameData, World world)
    }

    class AsteroidSplitterImpl {
        +void createSplitAsteroid(Entity e, World w)
    }
}

AsteroidControlSystem --> CommonAsteroid.Asteroid
AsteroidPlugin --> CommonAsteroid.Asteroid
AsteroidSplitterImpl --|> CommonAsteroid.AsteroidSplitterSPI
AsteroidSplitterImpl --> CommonAsteroid.Asteroid


@enduml